Fix bug with collapsed navbar on wide device

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -210,19 +210,21 @@ li a {
   padding-right: 15px;
 }
 
-.navbar-collapse {
-  background-color: white;
-  width: 150px;
-  right: 0;
-  position: absolute;
-  top: 50px;
-}
-
 @media(min-width:768px) {
 
     .navbar {
       padding-right: 15px;
     }
+}
+
+@media(max-width:768px) {
+  .navbar-collapse {
+    background-color: white;
+    width: 150px;
+    right: 0;
+    position: absolute;
+    top: 50px;
+  }
 }
 
 .navbar-default .navbar-nav > li > a:hover {
